add ejs templates

--- a/src/index.ejs
+++ b/src/index.ejs
@@ -5,11 +5,12 @@
   <meta charset="utf-8">
   <title>VR Website</title>
   <meta name="description" content="VR Website test">
-  <script src="dist\index.bundle.js"></script>
 </head>
 
 <body>
-  <div id="root"></div>
+  <div id="root">
+    <%- include entities/scene %>
+  </div>
 </body>
 
 </html>
