--- a/src/entities/scene.ejs
+++ b/src/entities/scene.ejs
@@ -1,7 +1,7 @@
 <a-scene
     avatar-recorder
     stats
-    background="color: #89D1F"
+    background="color: #89D1FF"
 >
     <%- include assets %>
     <%- include player %>
