add better doors

--- a/src/entities/assets.ejs
+++ b/src/entities/assets.ejs
@@ -1,10 +1,10 @@
 <a-assets>
-    <img id="<%- ids.cancelIconTexture -%>" src="/public/icons/cancel-button.png"></img>
-    <img id="<%- ids.floorTexture -%>" src="/public/icons/floor_wood.jpg"></img>
-    <a-asset-item id="<%- ids.doorsObject -%>" src="/public/icons/doors_2.obj"></a-asset-item>
-    <a-asset-item id="<%- ids.doorsMaterial -%>" src="/public/icons/doors_2.mtl"></a-asset-item>
-    <a-asset-item id="<%- ids.windowObject -%>" src="/public/icons/window.obj"></a-asset-item>
-    <a-asset-item id="<%- ids.windowMaterial -%>" src="/public/icons/window.mtl"></a-asset-item>
-    <a-asset-item id="<%- ids.lampObject -%>" src="/public/icons/lamp.obj"></a-asset-item>
-    <a-asset-item id="<%- ids.lampMaterial -%>" src="/public/icons/lamp.mtl"></a-asset-item>
+    <img id="<%- ids.cancelIconTexture -%>" src="/assets/cancel-button.png"></img>
+    <img id="<%- ids.floorTexture -%>" src="/assets/floor_wood.jpg"></img>
+    <a-asset-item id="<%- ids.doorsObject -%>" src="/assets/doors_2.obj"></a-asset-item>
+    <a-asset-item id="<%- ids.doorsMaterial -%>" src="/assets/doors_2.mtl"></a-asset-item>
+    <a-asset-item id="<%- ids.windowObject -%>" src="/assets/window.obj"></a-asset-item>
+    <a-asset-item id="<%- ids.windowMaterial -%>" src="/assets/window.mtl"></a-asset-item>
+    <a-asset-item id="<%- ids.lampObject -%>" src="/assets/lamp.obj"></a-asset-item>
+    <a-asset-item id="<%- ids.lampMaterial -%>" src="/assets/lamp.mtl"></a-asset-item>
 </a-assets>
