--- a/src/entities/scene.ejs
+++ b/src/entities/scene.ejs
@@ -1,9 +1,5 @@
-<a-scene
-    avatar-recorder
-    stats
-    background="color: #89D1FF"
->
+<a-scene avatar-recorder stats background="color: #89D1FF">
     <%- include assets %>
-    <%- include player %>
-    <%- include room %>
+        <%- include player %>
+            <%- include room/room %>
 </a-scene>
