--- a/src/entities/scene.ejs
+++ b/src/entities/scene.ejs
@@ -1,4 +1,5 @@
 <a-scene avatar-recorder stats background="color: #89D1FF">
+    <a-entity light="type: ambient; intensity: 0.1;"></a-entity>
     <%- include assets %>
         <%- include player %>
             <%- include room/room %>
